# iouring

./: Cargo.toml  rust-toolchain.toml
benches/: iouring.rs
src/: lib.rs  queue.rs  send_ptr.rs
